--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
       .flashcard-back {
         transform: rotateY(180deg);
       }
+      /* --- General Animation --- */
+      @keyframes fadeIn {
+        from { opacity: 0; transform: translateY(10px); }
+        to { opacity: 1; transform: translateY(0); }
+      }
+      .animate-fade-in {
+        animation: fadeIn 0.5s ease-out forwards;
+      }
     </style>
   <script type="importmap">
 {
